Progress going on ...

--- a/index.html
+++ b/index.html
@@ -1,73 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link
-    href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
 
 </head>
+
 <body>
     <div class="main w-full">
- <div class="offer bg-[#99c1c5] py-3 px-4">
-    <h4 class="text-sm">Use code "Sharktank" and get flat 20% OFF (Not applicable on iced teas)</h4>
- </div>
- <div class="navbar flex justify-between w-full px-4 py-6">
-<img class="w-40" src="./image/beyondwater_Logo_1x1-01_800x.avif" alt="">
-<div class="right flex gap-5 items-center">
-<a class="text-sm font-medium" href="#">Shope</a>
-<a class="text-sm font-medium" href="#">Menu</a>
-</div>
- </div>
- <div class="banner">
-    <div class="img w-full h-[40vh] ">
-<img class="w-full h-full object-cover object-position-center" src="./image/banner.jpg" alt="">
-    </div>
-    <div class="info px-4 py-10 w-full min-h-[40vh]">
- <h3 class="text-3xl font-medium tracking-tighter">We make water</h3>
- <h1 class="text-7xl font-bold tracking-tighter leading-[3.5rem]">Super-</h1>
- <h1 class="text-7xl font-bold tracking-tighter leading-[3.5rem]">Powered 💪🏻</h1>
- <h5 class="text-xl font-medium leading-none tracking-tighter mt-3">That's Our story</h5>
- <div class=" w-3/4 shopingoffer flex items-center gap-2 rounded-xl mt-4 px-4 py-1 bg-[#FBD11B]" >
-    <i class="ri-truck-line"></i>
-<h3 class="text-sm font-semibold tracking-tight leading-none">Free shiping on order above 500</h3>
- </div>
- <button class="text-white bg-black px-5 py-3 mt-5 rounded-lg font-semibold">Check Products</button>
-    </div>
- </div>
- <div class="sugar my-5 w-full h-[50vh] flex items-center overflow-hidden">
-          <img class="bg-red-500 w-full h-full object-contian" src="./image/white_shadow1.png" alt="">
- </div>
- <div class="workslikeMagic px-3 py-5 overflow-hidden">
-    <h1 class="text-4xl  font-regular tracking-tighter"><span class="font-semibold ">Beyond</span>Water</h1>
-    <h1 class="text-4xl font-semibold capitlize tracking-tighter">Works Like Magic ✨</h1>
-    <img class="w-full scale-[1.2]  mt-8" src="https://drinkbeyond.co.in/cdn/shop/files/WEB_BANNER_2048x.jpg?v=1656586855" alt="">
- </div>
- <div class="Horizontlescroll w-full mt-20">
-   <div class="h-container w-full h-[400vh] relative">
-    <div class="slides sticky top-0 h-screen flex whitespace-nowrap overflow-hidden">
-        <div class="1-h-page w-full  flex-shrink-0 h-screen bg-[#A5D9DF]">
-            <div class="centerd-text flex flex-col items-center absolute left-1/2 top-[45%] -translate-x-1/2 -translate-y-1/2 text-center">
-                <h1 class="font-semibold tracking-tighter capitlize text-3xl text-[#466366]">it's as easy as it can get.</h1>
-                <a class="px-10 py-3 bg-[#466366] font-medium rounded-full text-white mt-3" href="">Try beyondwater</a>
-            </div>
-            <img class="absolute right-0 -bottom-10 w-2/3 " src="" alt="">
-            <img class="absolute top-0 w-1/3 " src="" alt="">
-            <img class="absolute bottom-0 -left-20 w-3/4 " src="" alt="">
+        <div class="offer bg-[#99c1c5] py-3 px-4">
+            <h4 class="text-sm">Use code "Sharktank" and get flat 20% OFF (Not applicable on iced teas)</h4>
         </div>
-    <div class="2-h-page w-full flex-shrink-0 h-screen bg-red-300"></div>
-    <div class="3-h-page w-full flex-shrink-0 h-screen bg-red-200"></div>
-    <div class="4-h-page w-full flex-shrink-0 h-screen bg-red-100"></div>
-    </div>
-   </div>
- </div>
-    </div>
-    <script src="script.js"></script>
-   <div>
-    
-   </div>
+        <div class="navbar flex justify-between w-full px-4 py-6">
+            <img class="w-40" src="./image/beyondwater_Logo_1x1-01_800x.avif" alt="">
+            <div class="right flex gap-5 items-center">
+                <a class="text-sm font-medium" href="#">Shope</a>
+                <a class="text-sm font-medium" href="#">Menu</a>
+            </div>
+        </div>
+        <div class="banner">
+            <div class="img w-full h-[40vh] ">
+                <img class="w-full h-full object-cover object-position-center" src="./image/banner.jpg" alt="">
+            </div>
+            <div class="info px-4 py-10 w-full min-h-[40vh]">
+                <h3 class="text-3xl font-medium tracking-tighter">We make water</h3>
+                <h1 class="text-7xl font-bold tracking-tighter leading-[3.5rem]">Super-</h1>
+                <h1 class="text-7xl font-bold tracking-tighter leading-[3.5rem]">Powered 💪🏻</h1>
+                <h5 class="text-xl font-medium leading-none tracking-tighter mt-3">That's Our story</h5>
+                <div class=" w-3/4 shopingoffer flex items-center gap-2 rounded-xl mt-4 px-4 py-1 bg-[#FBD11B]">
+                    <i class="ri-truck-line"></i>
+                    <h3 class="text-sm font-semibold tracking-tight leading-none">Free shiping on order above 500</h3>
+                </div>
+                <button class="text-white bg-black px-5 py-3 mt-5 rounded-lg font-semibold">Check Products</button>
+            </div>
+        </div>
+        <div class="sugar my-5 w-full h-[50vh] flex items-center overflow-hidden">
+            <img class="bg-red-500 w-full h-full object-contian"
+                src="https://images.unsplash.com/photo-1552089123-2d26226fc2b7?q=80&w=1664&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="">
+        </div>
+        <div class="workslikeMagic px-3 py-5 overflow-hidden">
+            <h1 class="text-4xl  font-regular tracking-tighter"><span class="font-semibold ">Beyond</span>Water</h1>
+            <h1 class="text-4xl font-semibold capitlize tracking-tighter">Works Like Magic ✨</h1>
+            <img class="w-full scale-[1.2]  mt-8"
+                src="https://drinkbeyond.co.in/cdn/shop/files/WEB_BANNER_2048x.jpg?v=1656586855" alt="">
+        </div>
+        <div class="Horizontlescroll w-full mt-20">
+            <div class="h-container w-full h-[400vh] relative">
+                <div class="slides sticky top-0 h-screen flex whitespace-nowrap overflow-hidden">
+                    <div class="1-h-page   w-full   flex-shrink-0 h-screen w-full bg-[#A5D9DF]">
+                        <div
+                            class="centerd-text flex flex-col items-center absolute left-1/2 top-[45%] -translate-x-1/2 -translate-y-1/2 text-center">
+                            <h1 class="font-semibold tracking-tighter capitlize text-3xl text-[#466366]">it's as easy as
+                                it can get.</h1>
+                            <a class="px-10 py-3 bg-[#466366] font-medium rounded-full text-white mt-3" href="">Try
+                                beyondwater</a>
+                        </div>
+                        <img class="absolute right-0 -bottom-10 w-2/3 " src="" alt="">
+                        <img class="absolute top-0 w-1/3 " src="" alt="">
+                        <img class="absolute bottom-0 -left-20 w-3/4 " src="" alt="">
+                    </div>
+                    <div
+                        class="2-h-page  w-full flex items-end pb-32 justify-center flex-shrink-0 h-screen w-full bg-[#6431a5]">
+                        <img class="absolute top-0 left-1/2 -translate-x-1/2 w-3/4" src="" alt="">
+                        <h1 class="text-[40vw] font-[800] tracking-tighter text-white">FLIP IT</h1>
+                    </div>
+                    <div
+                        class="3-h-page  w-full flex items-center justify-center flex-shrink-0 h-screen w-full bg-[#fbd11b]">
+                        <img class="absolute top-1/2 left-1/2 -translate-y-1/2 -translate-x-1/2 w-3/4" src="" alt="">
+                        <h1 class="text-[40vw] font-[800] tracking-tighter text-[#D9A900]">SHAKE</h1>
+                    </div>
+                    <div class="4-h-page  flex items-center justify-center flex-shrink-0 w-full h-screen bg-[#14bb7f]">
+                        <img class="absolute bottom-0 left-1/2  -translate-x-1/2 w-3/4" src="" alt="">
+                        <h1 class="text-[30vw] font-[800] tracking-tighter text-[#2c8666]">DRINK</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="Vitamin  my-10">
+            <h1 class="text-5xl px-4 font-semibold tracking-tighter">Vitamin driks</h1>
+            <div class="Product pl-4 overflow-x-auto whitespace-nowrap flex gap-5 mt-10">
+                <div class="Product-container flex-shrink-0">
+                    <div class="w-52">
+                        <div class="Img-box flex items-center justify-center rounded-t-lg h-60 w-full bg-[#FFC46B]">
+
+                            <img class="w-full" src="" alt="">
+                        </div>
+                        <div
+                            class="discription bg-[#ffe8c4] text-[#a36d1c] flex items-center justify-between px-3 py-3">
+                            <h3 class="text-lg font-semibold">Justy Orange</h3>
+                            <h3 class="font-bold">$ 300</h3>
+                        </div>
+                        <button class="w-full mt-2 text-[#754e15] rounded-lg font-semibold  py-3 bg-[#ffe8c4]">Add To
+                            Cart</button>
+                    </div>
+                </div>
+                <div class="Product-container flex-shrink-0">
+                    <div class="w-52">
+                        <div class="Img-box flex items-center justify-center rounded-t-lg h-60 w-full bg-[#FCb8a9]">
+
+                            <img class="w-full" src="" alt="">
+                        </div>
+                        <div
+                            class="discription bg-[#fcb8a4] text-[#834d4d] flex items-center justify-between px-3 py-3">
+                            <h3 class="text-lg font-semibold">Justy Orange</h3>
+                            <h3 class="font-bold">$ 300</h3>
+                        </div>
+                        <button class="w-full mt-2 text-[#834d4d] rounded-lg font-semibold  py-3 bg-[#fcb8a4]">Add To
+                            Cart</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="DoYouKnow-div flex flex-col justify-between font-regular w-full h-screen px-5 py-10">
+            <div class="Top">
+                <h1 class="text-5xl font-semibold tracking-tighter">Do You know ?</h1>
+                <h1 class=" text-7xl tracking-tighter mt-5  leading-none">Not all</h1>
+                <h1 class=" text-7xl tracking-tighter leading-none"><span class="font-semibold">fats,</span> are</h1>
+                <h1 class="font-semibold text-7xl tracking-tighter">bad fats</h1>
+            </div>
+            <div class="btm text-right">
+         <h3 class="text-4xl ">Our <span class="font-medium"> Instagram has more info like this</span></h3>
+         <a class="px-10 py-3 mt-5 text-2xl  text-white bg-black tracking-tighter inline-block" href="">Click to see</a>
+            </div>
+            
+        </div>
+        <div class="Brands">
+
+        </div>
+        <script src="script.js"></script>
+        <div>
+
+        </div>
 </body>
+
 </html>
