Mobile view completed

--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
                         <img class="absolute top-0 w-1/3 " src="" alt="">
                         <img class="absolute bottom-0 -left-20 w-3/4 " src="" alt="">
                     </div>
-                    <div
-                        class="2-h-page  w-full flex items-end pb-32 justify-center flex-shrink-0 h-screen w-full bg-[#6431a5]">
+                    <div class="2-h-page  w-full flex items-end pb-32 justify-center flex-shrink-0 h-screen w-full bg-[#6431a5]">
                         <img class="absolute top-0 left-1/2 -translate-x-1/2 w-3/4" src="" alt="">
                         <h1 class="text-[40vw] font-[800] tracking-tighter text-white">FLIP IT</h1>
                     </div>
@@ -125,18 +124,34 @@
                 <h1 class="font-semibold text-7xl tracking-tighter">bad fats</h1>
             </div>
             <div class="btm text-right">
-         <h3 class="text-4xl ">Our <span class="font-medium"> Instagram has more info like this</span></h3>
-         <a class="px-10 py-3 mt-5 text-2xl  text-white bg-black tracking-tighter inline-block" href="">Click to see</a>
+                <h3 class="text-4xl ">Our <span class="font-medium"> Instagram has more info like this</span></h3>
+                <a class="px-10 py-3 mt-5 text-2xl  text-white bg-black tracking-tighter inline-block" href="">Click to
+                    see</a>
             </div>
-            
-        </div>
-        <div class="Brands">
 
         </div>
+        <div class="Brands my-20">
+            <h3 class="text-2xl font-medium text-center tracking-tighter mb-5">Our brand recognised by</h3>
+            <div class="row flex gap-5 justify-center items-center">
+                <img class="h-10 flex-shrink-0 " src="https://drinkbeyond.co.in/cdn/shop/files/Conde_Nast_traveller_400x.png?v=1655798017" alt="">
+                <img class="h-10 flex-shrink-0 " src="https://drinkbeyond.co.in/cdn/shop/files/Your_Story_400x.png?v=1655798016" alt="">
+                <img class="h-10 flex-shrink-0 " src="https://drinkbeyond.co.in/cdn/shop/files/Economic_Times_400x.png?v=1655798016" alt="">
+                <img class="h-10 flex-shrink-0 " src="https://drinkbeyond.co.in/cdn/shop/files/Jagran_Josh_400x.png?v=1655798016" alt="">
+
+            </div>
+            <div class="row flex gap-5 justify-center items-center">
+                <img class="h-10 flex-shrink-0 " src="https://drinkbeyond.co.in/cdn/shop/files/Mashable_400x.png?v=1655798016" alt="">
+                <img class="h-10 flex-shrink-0 " src="https://drinkbeyond.co.in/cdn/shop/files/Business_Insider_India_400x.png?v=1655798" alt="">
+                <img class="h-10 flex-shrink-0 " src="https://drinkbeyond.co.in/cdn/shop/files/Business_Insider_India_400x.png?v=1655798" alt="">
+                <img class="h-10 flex-shrink-0 " src="https://drinkbeyond.co.in/cdn/shop/files/Readers_fusion_400x.png?v=1655798016" alt="">
+                <img class="h-10 flex-shrink-0 " src="https://drinkbeyond.co.in/cdn/shop/files/Tech_Story_400x.png?v=1655798016" alt="">
+
+            </div>
+        </div>
+        <footer class="text-sm font-semibold text-center py-10 w px-3">This is a Re-imagined website for Sharktank brand beyondwater.</footer>
+    </div>
         <script src="script.js"></script>
-        <div>
-
-        </div>
+        
 </body>
 
 </html>
